# py-sql-cleaner

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  deploy-docs.yml
docs/: safety.md  usage.md
docs/architecture/: README.md
docs/development/: branching.md
py_sql_cleaner/: __init__.py  cli.py  detector.py  extractor.py  formatter.py  rewriter.py
py_sql_cleaner/adapters/: __init__.py  sqlglot_formatter.py
py_sql_cleaner/application/: __init__.py  extract_sql.py  format_source.py  inspect_sql.py  ports.py
py_sql_cleaner/cli/: __init__.py  app.py
py_sql_cleaner/core/: __init__.py  detector.py  rewriter.py
py_sql_cleaner/domain/: __init__.py  config.py  detector.py  errors.py  extractor.py  models.py  safety.py
py_sql_cleaner/infrastructure/: __init__.py  sqlglot_formatter.py
scripts/: check
tests/: README.md  test_detector.py  test_extract_command.py  test_format_command.py  test_formatter.py
tests/adapters/: test_sqlglot_formatter.py
tests/cli/: test_extract_command.py  test_format_command.py  test_list_command.py
tests/core/: test_detector.py
tests/domain/: test_detector.py
tests/infrastructure/: test_sqlglot_formatter.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: intro.md
website/docs/getting-started/: installation.md  quick-start.md
website/docs/project/: contributing.md  safety.md  status.md
website/docs/reference/: commands.md  supported-input.md
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
