[project]
name = "py-sql-cleaner"
version = "0.1.0"
description = "Find, format, and extract SQL embedded in Python files."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "enumura1" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "sqlglot>=25",
]

[project.urls]
Documentation = "https://enumura1.github.io/py-sql-cleaner/"
PyPI = "https://pypi.org/project/py-sql-cleaner/"
Repository = "https://github.com/enumura1/py-sql-cleaner"
Issues = "https://github.com/enumura1/py-sql-cleaner/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "import-linter>=2",
    "pytest>=8",
    "ruff>=0.8",
    "twine>=6",
]

[project.scripts]
py-sql-cleaner = "py_sql_cleaner.cli.app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/**/*.py" = ["F821", "S608"]
"tests/**/*.py" = ["S101"]

[tool.importlinter]
root_package = "py_sql_cleaner"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "py_sql_cleaner.cli",
    "py_sql_cleaner.application",
    "py_sql_cleaner.infrastructure",
    "py_sql_cleaner.domain",
]

[[tool.importlinter.contracts]]
name = "Domain is independent"
type = "forbidden"
source_modules = ["py_sql_cleaner.domain"]
forbidden_modules = [
    "py_sql_cleaner.cli",
    "py_sql_cleaner.application",
    "py_sql_cleaner.infrastructure",
    "typer",
    "rich",
    "sqlglot",
]

[[tool.importlinter.contracts]]
name = "Application receives infrastructure through ports"
type = "forbidden"
source_modules = ["py_sql_cleaner.application"]
forbidden_modules = [
    "py_sql_cleaner.infrastructure",
    "typer",
    "rich",
    "sqlglot",
]

[[tool.importlinter.contracts]]
name = "Infrastructure does not depend on use cases"
type = "forbidden"
source_modules = ["py_sql_cleaner.infrastructure"]
forbidden_modules = [
    "py_sql_cleaner.cli",
    "py_sql_cleaner.application",
    "typer",
    "rich",
]

[[tool.importlinter.contracts]]
name = "CLI does not call domain directly"
type = "forbidden"
source_modules = ["py_sql_cleaner.cli"]
forbidden_modules = ["py_sql_cleaner.domain"]
allow_indirect_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
